test/golden/error.function_no_such_param.golden
Runtime error: function has no parameter 'b'
    ./test/golden/error.function_no_such_param.jsonnet:1:1,3:1